--- a/chess/static/game/game-style.css
+++ b/chess/static/game/game-style.css
@@ -18,6 +18,7 @@
     float:left;
     border:1px solid gray;
     background-color: whitesmoke;
+    
 }
 
 .inRange {
@@ -30,4 +31,14 @@
 
 .board-space:hover {
     background-color: yellowgreen;
+}
+
+
+.image {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, 5%);
+    pointer-events: none;
 }
