--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'game-style.css' %}">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'game/game-style.css' %}">
+    {{ game_id|json_script:"game_id" }}
+    <title>Game {{ game_id }}</title>
 </head>
 <body>
     <div class="grid board-container"></div>
-    <script src="{% static 'game.js' %}"></script>
+    <script src="{% static 'game/game.js' %}"></script>
+    <script src="{% static 'game/pawns.js' %}"></script>
 </body>
 </html>
