--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -12,6 +12,6 @@
 <body>
     <div class="grid board-container"></div>
     <script src="{% static 'game/game.js' %}"></script>
-    <script src="{% static 'game/pawns.js' %}"></script>
+    <script src="{% static 'game/classes.js' %}"></script>
 </body>
 </html>
