--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -13,5 +13,6 @@
     <div class="grid board-container"></div>
     <script src="{% static 'game/game.js' %}"></script>
     <script src="{% static 'game/classes.js' %}"></script>
+    <script src="{% static 'game/selectors.js' %}"></script>
 </body>
 </html>
