--- a/templates/lobby/lobby.html
+++ b/templates/lobby/lobby.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 </div>
-
 <script src="{% static 'lobby/lobby.js' %}"></script>
+<script src="{% static 'lobby/lobby-channels.js' %}"></script>
 </body>
 </html>
