--- a/chess/static/game/game-style.css
+++ b/chess/static/game/game-style.css
@@ -10,9 +10,29 @@
     min-width: 450px;
 }
 
+.endTurn {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.detailsPanel {
+    position: absolute;
+    top: 0;
+    left: -30%;
+    height: 100%;
+    width: 30%;
+    background-color: antiquewhite;
+    border-right: 2px solid gray;
+}
+
 .board-space {
     min-height: 50px;
     min-width: 50px;
+    max-height: 50px;
+    max-width: 50px;
     margin:-1px;
     padding:0;
     float:left;
