--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,13 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Witaj w Login</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="{% static 'login/login-style.css' %}">
 </head>
 <body>
-    <h1>Witaj </h1>
-    <p>otwiera sie</p>
-    
+    <form method="post" action="{% url 'user_login' %}">
+        {% csrf_token %}
+        <label for="username">Nazwa użytkownika:</label>
+        <input type="text" name="username" id="username" required>
+
+        <label for="password">Hasło:</label>
+        <input type="password" name="password" id="password" required>
+
+        <button type="submit">Zaloguj się</button>
+
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
+    </form>
 </body>
 </html>
