--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'game/game-style.css' %}">
     {{ game_id|json_script:"game_id" }}
+    {{ user.username|json_script:"username" }}
     <title>Game {{ game_id }}</title>
 </head>
 <body>
