--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -18,8 +18,9 @@
         <p> Atk <a class="detailsAtk"></a></p>
         <p> HP <a class="detailsHPCurrent"></a>/<a class="detailsHPMax"></a></p>
         <hr>
-        <div class="buildingMenu"></div>
+        <div class="unitsMenu"></div>
         <hr>
+        <div class="buildingMenu"></div>
     </div>
     <button class="endTurn" onclick="endTurn()">End Turn</button>
     <script src="{% static 'game/game.js' %}"></script>
