--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -11,6 +11,7 @@
     <title>Game {{ game_id }}</title>
 </head>
 <body>
+    <div class="unitContainer"><img src="#" class="unitImage"></img></div>
     <div class="grid board-container"></div>
     <div class="detailsPanel">
         <h2 class="detailsName">Building Panel</h2>
