--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -81,6 +81,7 @@
     </div>
 
     <!-- game proper !-->
+    <div class="skillContainer"></div>
     <div class="timer"></div>
     <div class="unitContainer"><img src="#" class="unitImage"></img></div>
     <div class="turnNotif"><h3>New Turn!</h3><p class="user"></p></div>
